syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "InfraredModel";

import "google/protobuf/struct.proto";

// ####################
// ### EXTENDED    ###
// ####################

// Request for creating Device Type.
message GInfraredDeviceTypeCreateRequest {
	string id = 1;
	string typeName = 2;
	string imageUrl = 3;
	string iconOnOff = 4;
	string typeCode = 5;
	string icon1D = 6;
	string icon2DOn = 7;
	string icon2DOff = 8;
	string icon3DOn = 9;
	string icon3DOff = 10;
}

message GInfraredDeviceTypeSearchCriteria {
	repeated string typeName = 1;
}

message GInfraredDeviceType {
	string id = 1;
	string typeName = 2;
	string imageUrl = 3;
	string iconOnOff = 4;
	string pageNumber = 5;
	string pageSize = 6;
	string typeCode = 7;
	string icon1D = 8;
	string icon2DOn = 9;
	string icon2DOff = 10;
	string icon3DOn = 11;
	string icon3DOff = 12;
}

// Request for creating Device Type Brand.
message GInfraredDeviceTypeBrandCreateRequest {
	string id = 1;
	string type = 2;
	string brand = 3;
}

message GInfraredDeviceTypeBrandSearchCriteria {
	repeated string type = 1;
	repeated string brand = 2;
	string pageNumber = 3;
	string pageSize = 4;
}


message GInfraredDeviceTypeBrand {
	string id = 1;
	string type = 2;
	string brand = 3;
}

// Request for creating Device Code set.
message GInfraredDeviceCodesetCreateRequest {
	string id = 1;
	string deviceTypeBrandId = 2;
	string codesetName = 3;
}

message GInfraredDeviceCodesetSearchCriteria {
	repeated string deviceTypeBrandId = 1;
	repeated string codesetName = 2;
	string pageNumber = 3;
	string pageSize = 4;
}

message GInfraredDeviceCodeset {
	string id = 1;
	string deviceTypeBrandId = 2;
	string codesetName = 3;
}

// Request for creating IR Code Raw.
message GIrCodeRawCreateRequest {
	string id = 1;
	string codesetName = 2;
	string functionName = 3;
	string power = 4;
	string mode = 5;
	string fan = 6;
	string temp = 7;
	string swing = 8;
	string timer = 9;
	string timerMins = 10;
	string led = 11;
	string comfort = 12;
	string econo = 13;
	string powerful = 14;
	string irFreq = 15;
	string irCode = 16;
	string sleep = 17;
	string sleepMins = 18;
	string areaToken = 19;
}

message GIrCodeRaw {
	string id = 1;
	string codesetName = 2;
	string functionName = 3;
	string power = 4;
	string mode = 5;
	string fan = 6;
	string temp = 7;
	string swing = 8;
	string timer = 9;
	string timerMins = 10;
	string led = 11;
	string comfort = 12;
	string econo = 13;
	string powerful = 14;
	string irFreq = 15;
	string irCode = 16;
	string sleep = 17;
	string sleepMins = 18;
	string areaToken = 19;
}

message GIrCodeRawLearn {
	string id = 1;
	string codesetName = 2;
	string functionName = 3;
	string power = 4;
	string mode = 5;
	string fan = 6;
	string temp = 7;
	string swing = 8;
	string timer = 9;
	string timerMins = 10;
	string led = 11;
	string comfort = 12;
	string econo = 13;
	string powerful = 14;
	string irFreq = 15;
	string irCode = 16;
	string sleep = 17;
	string sleepMins = 18;
	string typeCode = 19;
	string brandName = 20;
	string clientId = 21;
	string areaToken = 22;
}